--- a/imc/index.html
+++ b/imc/index.html
@@ -7,12 +7,12 @@
     <title>Calculadora IMC</title>
 </head>
 <body>
-    <header>Calculadora IMC</header>
-    <section>
-        <div>
+    <main>
+        <div class="container">
+            <div class="title">Calculadora - IMC </div>
             
+
         </div>
-        <div></div>
-    </section>
+    </main>  
 </body>
 </html>
