criando label nome

--- a/imc/index.html
+++ b/imc/index.html
@@ -10,7 +10,10 @@
     <main>
         <div class="container">
             <div class="title">Calculadora - IMC </div>
-            
+            <div class="input">
+                <label>Nome:</label>
+                <input type="text"  id="name">
+            </div>
 
         </div>
     </main>  
