criando label altura

--- a/imc/index.html
+++ b/imc/index.html
@@ -12,9 +12,12 @@
             <div class="title">Calculadora - IMC </div>
             <div class="input">
                 <label>Nome:</label>
-                <input type="text"  id="name">
+                <input type="text" id="name">
             </div>
-
+            <div class="input">
+                <label">Altura:</label>
+                <input type="text" id="altura">
+            </div>
         </div>
     </main>  
 </body>
