criando label peso

--- a/imc/index.html
+++ b/imc/index.html
@@ -15,8 +15,12 @@
                 <input type="text" id="name">
             </div>
             <div class="input">
-                <label">Altura:</label>
+                <label>Altura:</label>
                 <input type="text" id="altura">
+            </div>
+            <div class="input">
+                <label>Peso</label>
+                <input type="text" id="peso">
             </div>
         </div>
     </main>  
