--- a/imc/index.html
+++ b/imc/index.html
@@ -22,6 +22,7 @@
                 <label>Peso</label>
                 <input type="text" id="peso">
             </div>
+            <button id="calcular">Calcular</button>
         </div>
     </main>  
 </body>
