--- a/imc/index.html
+++ b/imc/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora IMC</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
@@ -23,7 +24,10 @@
                 <input type="text" id="peso">
             </div>
             <button id="calcular">Calcular</button>
+
+            <div class="result" id="resultado"></div>
         </div>
-    </main>  
+    </main>
+    <script src="../imc/script.js"></script>  
 </body>
 </html>
