--- a/imc/index.html
+++ b/imc/index.html
@@ -17,11 +17,11 @@
             </div>
             <div class="input">
                 <label>Altura:</label>
-                <input type="text" id="altura">
+                <input type="number" id="altura">
             </div>
             <div class="input">
                 <label>Peso</label>
-                <input type="text" id="peso">
+                <input type="number" id="peso">
             </div>
             <button id="calcular">Calcular</button>
 
