--- a/lampada/index.html
+++ b/lampada/index.html
@@ -8,7 +8,18 @@
     <title>Lâmpada</title>
 </head>
 <body>
-    
+    <header>
+        <h1>VANILLA JS</h1> 
+    </header>
+    <main>
+        <div>
+            <img src="./img/desligada.jpg" alt="Lâmpada" id="lamp">
+        </div>
+        <div>
+            <button id="turnOn">Ligar</button>
+            <button id="turnOff">Desligar</button>
+        </div>
+    </main>
     <script src="../lampada/lampada.js"></script>
 </body>
 </html>
