--- a/menuNavegacoes/index.html
+++ b/menuNavegacoes/index.html
@@ -10,5 +10,19 @@
 <body>
     <h1 id="titulo">Seja bem Vindo</h1>
     
+    <aside>
+        <div id="menu-opener">
+            <img src="./menu.png" width="36">
+        </div>
+        <div id="menu-area">
+            <ul>
+                <li>Home</li>
+                <li>Sobre</li>
+                <li>Contato</li>
+            </ul>
+        </div>
+    </aside>
+
+    <script src="script.js"></script>
 </body>
 </html>
