--- a/menuNavegacoes/index.html
+++ b/menuNavegacoes/index.html
@@ -11,7 +11,7 @@
     <h1 id="titulo">Seja bem Vindo</h1>
     
     <aside>
-        <div id="menu-opener">
+        <div id="menu-opener" onclick="menuToggle()">
             <img src="./menu.png" width="36">
         </div>
         <div id="menu-area">
