inserindo id=container-itens

--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container-slide">
         <div class="action-button" id="previus">&laquo</div>
-        <div class="container-itens"></div>
+        <div class="container-itens" id="container-itens"></div>
         <div class="action-button" id="next">&raquo</div>
     </div>
     
