--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -7,29 +7,29 @@
     <title>Calculadora</title>
 </head>
 <body>
-    <div class="calculadora">
+    <div class="calculator">
         <div class="display">1234567</div>
-        <div class="calc-buttons">
-            <buttton>CE</buttton>
-            <buttton>C</buttton>
-            <buttton>x</buttton>
-            <buttton>/</buttton>
-            <buttton>7</buttton>
-            <buttton>8</buttton>
-            <buttton>9</buttton>
-            <buttton>*</buttton>
-            <buttton>4</buttton>
-            <buttton>5</buttton>
-            <buttton>6</buttton>
-            <buttton>-</buttton>
-            <buttton>1</buttton>
-            <buttton>2</buttton>
-            <buttton>3</buttton>
-            <buttton>+</buttton>
-            <buttton>+-</buttton>
-            <buttton>0</buttton>
-            <buttton>,</buttton>
-            <buttton>=</buttton>    
+        <div class="calculator-buttons">
+            <button>CE</button>
+            <button>C</button>
+            <button>«</button>
+            <button>/</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>*</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>+</button>
+            <button>±</button>
+            <button>0</button>
+            <button>,</button>
+            <button>=</button>
         </div>
     </div>
 </body>
